Made website simpler

--- a/index.html
+++ b/index.html
@@ -21,43 +21,15 @@
 </head>
 <body>
     <br />
-    <div id="dhead" class="container">
-        <div class="row">
-            <div id="dpic">
-                <img src="images/profileSanDiegoPic.jpeg" class="ppic" />
-            </div>
-            <div id="ddesc">
-                <br />
-                <h1>Kurt J. Foster</h1>
-                <h2>
-                    <a id="demo"></a>I enjoy building, testing, and repairing electromechanical systems 🛠️<br />
-                    <a class="bottomLink" target="_blank" href="pdfDocs/KurtJFoster.pdf" style="font-size: 14px;">Resumé.pdf</a>  <img src="images/openNewTab.png" />
-                </h2>
-                <div id="dico">
-                    <table>
-                        <tr>
-                            <th>
-                                <a href="https://github.com/KurtJFoster" target="_blank"><img src="images/githubLogo.png" class="iico" /></a>
-                            </th>
-                            <th>
-                                <img src="images/mailLogo.png" style="cursor: pointer;" class="iico" id="iemail" title="click to reveal" />
-                            </th>
-                            <th>
-                                <div id="demail"></div> <!-- Reveal's Email -->
-                            </th>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <br />
 
-        <hr />
-
-    </div>
+    <h1 style="font-size: 30px; margin-left: 20%; font-family: monospace;">Portfolio & Work History </br> of Kurt Foster</h1></br>
+    <h1 style="font-size: 15px; margin-left: 20%;"><u>Updated March 3rd, 2024</u>:</br> I'm open to new job opportunities in the Sparks-Reno area. </br> Currently a resident of Sparks, Nevada.</h1>
+    </br>
+    <h1 style="font-size: 15px; margin-left: 20%;">
+        Here is a copy of my <a class="bottomLink" target="_blank" href="pdfDocs/KurtJFoster.pdf" style="font-size: 14px;">Resumé.pdf</a>  <img src="images/openNewTab.png" />
+    </h1>
 
 
-    <!-- <center><i><h3 style="color: grey">Currently Part-time Engineering Student, </br> Automation Technician, and Mineral Shop Co-Owner. </br> <a class="bottomLink" target="_blank" href="pdfDocs/Kurt_Foster_Resume.pdf">Resume in PDF</a></h3></i></center>  -->
 
     <div id="experience" class="container">
         <br /><br />
@@ -331,12 +303,12 @@
                 <!-- Info section that comes up when the INFO logo picture is clicked -->
                 <div class="color-block8">
                     <div class="infoBlock">
-                <!-- WE NEED TO BUILD A NEW CLASS MAYBE? TRY REGULAR TEXT HERE FIRST -->
-                • Kept high-level attention to detail when fabricating/assembling complex robotic machinery<br />
-                • Drilled, tapped, fastened components for industrial electrical panels and pneumatic panels<br />
-                • Wired control panels using electrical diagrams, red-lined issues and reported to engineering<br />
-                • Stripped, crimped, assembled, MIL-Spec multi-pin connectors (up to 56-pin)<br />
-                • Followed work procedures associated with procurement for timely machine assembly<br />
+                        <!-- WE NEED TO BUILD A NEW CLASS MAYBE? TRY REGULAR TEXT HERE FIRST -->
+                        • Kept high-level attention to detail when fabricating/assembling complex robotic machinery<br />
+                        • Drilled, tapped, fastened components for industrial electrical panels and pneumatic panels<br />
+                        • Wired control panels using electrical diagrams, red-lined issues and reported to engineering<br />
+                        • Stripped, crimped, assembled, MIL-Spec multi-pin connectors (up to 56-pin)<br />
+                        • Followed work procedures associated with procurement for timely machine assembly<br />
                     </div>
                 </div>
             </div>
@@ -608,7 +580,7 @@
             <footer style="margin-left: 25%; margin-right: 25%; ">
                 <p>Copyright © <a id="p1"></a> 2024 by Kurt J. Foster</p>
                 <p style="color: grey;">
-                    Tools I've found interesting: <a class="bottomLink" target="_blank" href="https://www.onshape.com/en/">PTC OnShape</a>,  <a class="bottomLink" target="_blank" href="https://www.autodesk.com/products/autocad">Autodesk AutoCAD</a>, <br /><a class="bottomLink" target="_blank" href="https://www.graebert.com/cad-software/ares-commander/">Gräbert ARES Commander</a>, <a class="bottomLink" target="_blank" href="https://www.raspberrypi.com">Raspberry Pi</a>, <a class="bottomLink" target="_blank" href="https://www.arduino.cc">Arduino</a>, <a class="bottomLink" target="_blank" href="https://www.beagleboard.org">Beagle Board</a>, <a class="bottomLink" target="_blank" href="https://inductiveautomation.com/ignition/maker-edition">Ignition Maker Edition</a>, <a class="bottomLink" target="_blank" href="https://www.docker.com">Docker</a>, <a class="bottomLink" target="_blank" href="https://www.nginx.com">NGINX</a>, <a class="bottomLink" target="_blank" href="https://github.com/jaredhanson/passport">Passport.js</a>, <a class="bottomLink" target="_blank" href="https://socket.io">Socket.IO</a>, <a class="bottomLink" target="_blank" href="https://nodejs.org/">Node.js</a>, <a class="bottomLink" target="_blank" href="https://react.dev">React</a>, <a class="bottomLink" target="_blank" href="https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html">LTspice</a>, <a class="bottomLink" target="_blank" href="https://www.ni.com/en-us/shop/labview.html">LabVIEW</a>, <a class="bottomLink" target="_blank" href="https://www.mysql.com">MySQL</a>, <a class="bottomLink" target="_blank" href="https://standards.nasa.gov/nasa-technical-standards">NASA Standards</a>, <a class="bottomLink" target="_blank" href="https://exoplanetarchive.ipac.caltech.edu">NASA Exoplanet Archive</a>, <a class="bottomLink" target="_blank" href="https://www.teamviewer.com">TeamViewer</a>, <a class="bottomLink" target="_blank" href="https://github.com/jgraph/drawio">draw.io</a>, <a class="bottomLink" target="_blank" href="https://github.com">GitHub</a>, <a class="bottomLink" target="_blank" href="https://https://www.figma.com">Figma</a>, <a class="bottomLink" target="_blank" href="https://visualstudio.microsoft.com/#vs-section">Visual Studio</a>, <a class="bottomLink" target="_blank" href="https://platform.openai.com/codex-javascript-sandbox">Codex</a>, <a class="bottomLink" target="_blank" href="https://getbootstrap.com">getBootstrap</a>, <a class="bottomLink" target="_blank" href="https://www.w3schools.com">W3Schools</a>, <a class="bottomLink" target="_blank" href="https://midjourney.com/home/?callbackUrl=%2Fapp%2F">Midjourney</a>, <a class="bottomLink" target="_blank" href="https://jsfiddle.net">JSFiddle</a>, <a class="bottomLink" target="_blank" href="https://brm.io/matter-js/">Matter.js</a>, <a class="bottomLink" target="_blank" href="https://github.com/openai/point-e">Point-E</a>.
+                    Tools I've found interesting: <a class="bottomLink" target="_blank" href="https://www.onshape.com/en/">PTC OnShape</a>,  <a class="bottomLink" target="_blank" href="https://www.autodesk.com/products/autocad">Autodesk AutoCAD</a>, <br /><a class="bottomLink" target="_blank" href="https://www.graebert.com/cad-software/ares-commander/">Gräbert ARES Commander</a>, <a class="bottomLink" target="_blank" href="https://www.raspberrypi.com">Raspberry Pi</a>, <a class="bottomLink" target="_blank" href="https://www.arduino.cc">Arduino</a>, <a class="bottomLink" target="_blank" href="https://www.beagleboard.org">Beagle Board</a>, <a class="bottomLink" target="_blank" href="https://inductiveautomation.com/ignition/maker-edition">Ignition Maker Edition</a>, <a class="bottomLink" target="_blank" href="https://www.docker.com">Docker</a>, <a class="bottomLink" target="_blank" href="https://www.nginx.com">NGINX</a>, <a class="bottomLink" target="_blank" href="https://github.com/jaredhanson/passport">Passport.js</a>, <a class="bottomLink" target="_blank" href="https://socket.io">Socket.IO</a>, <a class="bottomLink" target="_blank" href="https://nodejs.org/">Node.js</a>, <a class="bottomLink" target="_blank" href="https://react.dev">React</a>, <a class="bottomLink" target="_blank" href="https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html">LTspice</a>, <a class="bottomLink" target="_blank" href="https://www.ni.com/en-us/shop/labview.html">LabVIEW</a>, <a class="bottomLink" target="_blank" href="https://www.mysql.com">MySQL</a>, <a class="bottomLink" target="_blank" href="https://standards.nasa.gov/nasa-technical-standards">NASA Standards</a>, <a class="bottomLink" target="_blank" href="https://exoplanetarchive.ipac.caltech.edu">NASA Exoplanet Archive</a>, <a class="bottomLink" target="_blank" href="https://www.teamviewer.com">TeamViewer</a>, <a class="bottomLink" target="_blank" href="https://github.com/jgraph/drawio">draw.io</a>, <a class="bottomLink" target="_blank" href="https://github.com">GitHub</a>, <a class="bottomLink" target="_blank" href="https://https://www.figma.com">Figma</a>, <a class="bottomLink" href="bookList.html">Books</a>, <a class="bottomLink" target="_blank" href="https://visualstudio.microsoft.com/#vs-section">Visual Studio</a>, <a class="bottomLink" target="_blank" href="https://platform.openai.com/codex-javascript-sandbox">Codex</a>, <a class="bottomLink" target="_blank" href="https://getbootstrap.com">getBootstrap</a>, <a class="bottomLink" target="_blank" href="https://www.w3schools.com">W3Schools</a>, <a class="bottomLink" target="_blank" href="https://midjourney.com/home/?callbackUrl=%2Fapp%2F">Midjourney</a>, <a class="bottomLink" target="_blank" href="https://jsfiddle.net">JSFiddle</a>, <a class="bottomLink" target="_blank" href="https://brm.io/matter-js/">Matter.js</a>, <a class="bottomLink" target="_blank" href="https://github.com/openai/point-e">Point-E</a>.
 
                     <br /><br />
 
@@ -735,9 +707,7 @@
                 $(".color-block11").toggle('invert');
             });
             /* This line is needed, like the examples above, to prevent it from being open initially */
-            $(".color-block11").toggle();
-
-        </script>
+            $(".color-block11").toggle();</script>
 
 
 
