--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br />
 
     <h1 style="font-size: 30px; margin-left: 20%; font-family: monospace;">Portfolio & Work History </br> of Kurt Foster</h1></br>
-    <h1 style="font-size: 15px; margin-left: 20%;"><u>Updated March 3rd, 2024</u>:</br> I'm open to new job opportunities in the Sparks-Reno area. </br> Currently a resident of Sparks, Nevada.</h1>
+    <h1 style="font-size: 15px; margin-left: 20%;"><u>Updated March 6th, 2024</u>:</br> I'm open to new job opportunities in the Sparks-Reno area. </br> Currently a resident of Sparks, Nevada.</h1>
     </br>
     <h1 style="font-size: 15px; margin-left: 20%;">
         Here is a copy of my <a class="bottomLink" target="_blank" href="pdfDocs/KurtJFoster.pdf" style="font-size: 14px;">Resumé.pdf</a>  <img src="images/openNewTab.png" />
