--- a/mandarin.html
+++ b/mandarin.html
@@ -22,23 +22,19 @@
 <body>
     <br />
 
-    <h1 style="font-size: 30px; margin-left: 20%; font-family: monospace;">Portfolio & Work History </br> of Kurt Foster</h1></br>
-
-
-    <!--
+    <h1 style="font-size: 30px; margin-left: 20%; font-family: monospace;">库尔特福斯特的作品集和工作经历</h1></br>
 
     <h1 style="font-size: 15px; margin-left: 20%;">
-        Choose language: <a class="bottomLink" target="_blank" href="spanish.html">Español</a> <a class="bottomLink" target="_blank" href="mandarin.html">普通话</a>
+        选择语言：<a class="bottomLink" target="_blank" href="spanish.html">Español</a> <a class="bottomLink" target="_blank" href="index.html">English</a>
     </h1></br>
 
-    -->
     <!--
     <h1 style="font-size: 15px; margin-left: 20%;"><u>Updated March 24th, 2024</u>:</br> I'm open to new job opportunities in the Sparks-Reno area. </br> Currently a resident of Sparks, Nevada.</h1>
     </br>
     -->
 
     <h1 style="font-size: 15px; margin-left: 20%;">
-        Here is a copy of my <a class="bottomLink" target="_blank" href="pdfDocs/KurtJFoster.pdf" style="font-size: 14px;">Resumé.pdf</a>  <img src="images/openNewTab.png" />
+        Here is a copy of my <a class="bottomLink" target="_blank" href="pdfDocs/KurtJFosterMandarin.pdf" style="font-size: 14px;">简历.pdf</a>  <img src="images/openNewTab.png" />
     </h1>
 
 
@@ -202,7 +198,7 @@
                     <table>
                         <tr>
                             <th>
-                                <h2>Jun 2018 - Jun 2024 · 1 yr 10 mos<br /> Sparks, Nevada, United States</h2>
+                                <h2>Jun 2018 - Feb 2021 · 1 yr 7 mos<br /> Sparks, Nevada, United States</h2>
                             </th>
                             <th>
                                 <!-- INFO toggle image button -->
@@ -225,25 +221,30 @@
 
                             <b style="font-size: 20px;">Work history:</b><br /><br />
 
-                            ➥ <i>Equipment Maintenance Technician</i><br /><br />
+                            ➥ <i>Equipment Maintenance Technician II</i><br /><br />
 
                             • First responding problem-solver managing machine breakdowns and full recovery<br />
-                            • Identified out of spec. material condition preventing at least $1mm+ of product from fallout<br />
                             • Diagnosing machine faults and laying out plan to execute repair or escalation procedure<br />
                             • Electrical systems ranging from 24VDC to 480VAC 3-phase<br />
                             • Repaired automated machinery, requiring full knowledge of the functional operation<br />
                             • Communicated with supervisors and managment for fast repair execution<br />
-                            • Mentored production associates on production ergonomics and improving machine output<br />
+                            • Talked with production associates on production ergonomics and improving machine output<br />
                             • Trained other Level 1 Maintenance Technicians on repair and maintenance tasks <br /><br />
-
-                            Apr—Jun 2024 • 3 mos.<br />
-                            Model 3, Battery Enclosure<br /><br />
 
                             Jan—Feb 2021 • 2 mos.<br />
                             Model 3 Drive Unit, Final Assembly<br /><br />
 
                             Oct—Dec 2020 • 3 mos.<br />
                             Model 3 Drive Unit, Test Line & Raven Line<br /><br />
+
+                            ➥ <i>Equipment Maintenance Technician I</i><br /><br />
+
+                            • Diagnosed equipment failures and suggested improvements to process engineering<br />
+                            • Prevented 500+ drive units from fallout (est. $3.6mm+ savings according to Sr. Process Engineer)<br />
+                            • Repaired automated machinery, requiring full knowledge of the functional operation<br />
+                            • Mentored production associates on equipment updates and safe throughput<br />
+                            • Replaced required mechanical and electrical components of production equipment<br />
+                            • Acted with the first intent being on creating a safe working environment for everyone<br /><br />
 
                             Jan—Jul 2019 • 7 mos.<br />
                             Model 3 Drive Unit, Test Line<br /><br />
@@ -594,8 +595,8 @@
                     <br /><br />
 
                     <!--
-                           Miscellaneous: <a class="bottomLink" href="bookList.html">Books</a>, <a class="bottomLink" href="businessAppsDashboard.html">Business-Apps Dashboard</a>.
-                    -->
+                            Miscellaneous: <a class="bottomLink" href="bookList.html">Books</a>, <a class="bottomLink" href="businessAppsDashboard.html">Business-Apps Dashboard</a>.
+                     -->
                 </p>
 
                 <p style="color: grey;">By accessing this website, you agree to the <a class="bottomLink" target="_blank" href="usePolicy.html">use policy</a>.</p>
@@ -716,16 +717,8 @@
                 $(".color-block11").toggle('invert');
             });
             /* This line is needed, like the examples above, to prevent it from being open initially */
-            $(".color-block11").toggle();
+            $(".color-block11").toggle();</script>
 
-
-
-            /* For toggling the 'Info' viewer for the Tesla 2024 project */
-            $("#toggle-button12").click(function () {
-                $(".color-block12").toggle('invert');
-            });
-            /* This line is needed, like the examples above, to prevent it from being open initially */
-            $(".color-block12").toggle();</script>
 
 
 </body>
