--- a/index.html
+++ b/index.html
@@ -325,13 +325,13 @@
         </div>
         <div class="project-item">
           <div class="project-image">
-            <img src="images/dosing-pic.png" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+            <img src="kfost/images/dosing-pic.png" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Automatic Dosing Unit</h3>
           <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics.</p>
-          <div class="navbar" style="font-family: 'Brush Script MT', cursive;">
+          <div class="navbar">
             <p>
-              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>onshape-3d</b></a>
+              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3d</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
