--- a/index.html
+++ b/index.html
@@ -312,26 +312,26 @@
           <div class="project-image">
             <img src="images/binoscope-pic.png" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
-          <h3>Portable, Meter-class Binoscope</h3>
+          <h3>Large Binoscope</h3>
           <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
-          <div class="navbar" style="font-family: 'Brush Script MT', cursive;">
+          <div class="navbar">
             <p>
-              <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>onshape-3d</b></a>
+              <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>Onshape-3D-viewer</b></a>
               <img src="images/openNewTab.png"><br>
-              <a href="https://docs.google.com/document/d/1WxkYBWqdLyLhxgRh7ZfJaYaSsf6swe2fiz7W-Qj-lPA/edit?usp=sharing" target="_blank"><b>google-doc</b></a>
+              <a href="https://docs.google.com/document/d/1WxkYBWqdLyLhxgRh7ZfJaYaSsf6swe2fiz7W-Qj-lPA/edit?usp=sharing" target="_blank"><b>Google-doc</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
         </div>
         <div class="project-item">
           <div class="project-image">
-            <img src="kfost/images/dosing-pic.png" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+            <img src="images/dosing-pic.png" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Automatic Dosing Unit</h3>
           <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics.</p>
           <div class="navbar">
             <p>
-              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3d</b></a>
+              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3D-viewer</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -340,9 +340,9 @@
           <div class="project-image"></div>
           <h3>Bearing Supply, Sorting, and Placement Machine</h3>
           <p>Places bearings into a housing on a conveyor line. It requires 5 DCVs, 5 pneumatic cylinders, and 12 sensors for operation.</p>
-          <div class="navbar" style="font-family: 'Brush Script MT', cursive;">
+          <div class="navbar">
             <p>
-              <a href="docs/bearing-supply.pdf" target="_blank"><b>pdf-doc</b></a>
+              <a href="docs/bearing-supply.pdf" target="_blank"><b>PDF-doc</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
@@ -351,9 +351,9 @@
           <div class="project-image"></div>
           <h3>Automated Parts Transfer System</h3>
           <p>Involves signal transmission between two Arduino's and a PLC while utilizing a pair of dual-axis wafer handling machines.</p>
-          <div class="navbar" style="font-family: 'Brush Script MT', cursive;">
+          <div class="navbar">
             <p>
-              <a href="docs/parts-transfer.pdf" target="_blank"><b>pdf-doc</b></a>
+              <a href="docs/parts-transfer.pdf" target="_blank"><b>PDF-doc</b></a>
               <img src="images/openNewTab.png">
             </p>
           </div>
