--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         </div>
         <div class="work-item">
           <div class="company-logo">
-            <img src="images/hp-logo.png" alt="HP Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+            <img src="images/hp-logo.jpg" alt="HP Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
             <h3>Repair and Maintenance Technician</h3>
