--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       <div class="work-list">
         <div class="work-item">
           <div class="company-logo">
-            <img src="images/ninkasi-logo.png" alt="Ninkasi Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+            <img src="images/ninkasi-logo.jpg" alt="Ninkasi Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
             <h3>Packaging Maintenance Technician</h3>
@@ -397,7 +397,7 @@
         </div>
         <div class="work-item">
           <div class="company-logo">
-            <img src="images/tesla-logo.png" alt="HP Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+            <img src="images/tesla-logo.jpg" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
             <h3>Equipment Maintenance Technician</h3>
@@ -478,7 +478,7 @@
         </div>
         <div class="work-item">
           <div class="company-logo">
-            <img src="images/tesla-logo.png" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+            <img src="images/tesla-logo.jpg" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
             <h3>Equipment Maintenance Technician</h3>
@@ -527,7 +527,7 @@
         </div>
         <div class="work-item">
           <div class="company-logo">
-            <img src="images/tesla-logo.png" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+            <img src="images/tesla-logo.jpg" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
             <h3>Equipment Maintenance Technician</h3>
@@ -556,7 +556,7 @@
         </div>
         <div class="work-item">
           <div class="company-logo">
-            <img src="images/ac-logo.png" alt="AC Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+            <img src="images/ac-logo.jpg" alt="AC Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
             <h3>Automation Technician Intern</h3>
