--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </div>
         <div class="project-item">
           <div class="project-image">
-            <img src="images/dosing-pic.png" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+            <img src="images/dosing-pic.jpg" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Automatic Dosing Unit</h3>
           <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics.</p>
