--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@
     
     <!-- Projects Section -->
     <section id="projects" class="section">
-      <h2>Projects</h2>
+      <h2>Electrical and Mechanical Projects</h2>
       <div class="project-grid">
         <div class="project-item">
           <div class="project-image">
-            <img src="images/binoscope-pic.png" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+            <img src="images/binoscope-pic.jpg" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
           </div>
           <h3>Large Binoscope</h3>
           <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
@@ -359,14 +359,30 @@
           </div>
         </div>
         <div class="project-item">
-          <div class="project-image"></div>
+          <div class="project-image">
+            <img src="images/truss-telescope-pic.jpg" alt="Truss Telescope CAD Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+          </div>
           <h3>Truss-style Newtonian Telescope</h3>
-          <p>[Under construction]</p>
+          <p>A small hobby of mine is optics, and this was a one-off project I started a while ago, lots of fun!</p>
+		  <div class="navbar">
+            <p>
+              <a href="https://cad.onshape.com/documents/bb61efcd8cafd93c45bcd32e/w/658a7cc72aebc31515716086/e/ccf98e5e25786474bdabf02e" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
         </div>
         <div class="project-item">
-          <div class="project-image"></div>
+          <div class="project-image">
+            <img src="images/bike-pic.jpg" alt="Mountain Bike Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+          </div>
           <h3>Aluminum Mountain Bike Frame</h3>
-          <p>[Under construction]</p>
+          <p>I built a custom TIG welded 6061 aluminum bike frame.</p>
+		  <div class="navbar">
+            <p>
+              <a href="docs/mountain-bike.pdf" target="_blank"><b>PDF-doc</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -384,14 +400,13 @@
             <h4>Ninkasi Brewing/Great Frontier Holdings</h4>
             <h5 style="color: grey;">October 2024 - December 2024 · 3 months · Eugene, OR</h5>
             <p>
-			• Act as a technical expert on the assigned packaging line, consulting external resources as required<br>
-			• Perform equipment adjustments and enhancements as required by production demands<br>
-			• Ensure the Packaging Team understands and adheres to the preventive maintenance program<br>
-			• Follow Ninkasi’s preventative maintenance program, making improvements/updates as needed<br>
-			• Perform preventative maintenance and trouble-shoot mechanical issues as they arise<br>
-			• Report to Facilities Manager to coordinate additional maintenance, as necessary<br>
-			• Maintain SOPs to meet changing machine specifications, training needs, and an evolving business<br>
-			• Perform all tasks in an efficient, safe, and productive manner<br>
+			• Performed equipment adjustments and enhancements as required by production demands<br>
+			• Ensured the Packaging Team understands and adheres to the preventive maintenance program<br>
+			• Followed preventative maintenance program, making improvements/updates as needed<br>
+			• Performed preventative maintenance and trouble-shoot mechanical issues as they arise<br>
+			• Reported to Facilities Manager to coordinate additional maintenance, as necessary<br>
+			• Maintained SOPs to meet changing machine specifications, training needs, and an evolving business<br>
+			• Performed all tasks in an efficient, safe, and productive manner<br>
 			</p>
           </div>
         </div>
