Added more information to projects

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         </div>
 		-->
         <h1 style="font-size: 25px;">Kurt J. Foster</h1>
-        <p>Webpage Status: <i><a style="color: green">Updated June 2025</a></i></p>
+        <p>Webpage Status: <a style="color: limegreen">Updated June 2025</a></p>
       </div>
       <div class="portfolio-apps">
         <div class="app-buttons">
@@ -298,7 +298,9 @@
         <div class="education-item">
 		  <h1 style="font-size: 25px;">About</h1>
           <p>
-			Welcome to my website. Here you will find my work history and some projects I am working on.
+			Hello and welcome! Here you will find my detailed work history and some projects I am working on.<br><br>
+			Although my webpage has a lot of information, you should be able to scan the site rather quickly if need be.<br><br>
+			I prefer to add details so it's a complete showcase of my skills/abilities, as well for anyone who wishes to use my documentation as a guide for their own projects.
           </p>
         </div>
       </div>
@@ -337,7 +339,9 @@
           </div>
         </div>
         <div class="project-item">
-          <div class="project-image"></div>
+          <div class="project-image">
+			<img src="images/bearing-pic.jpg" alt="Bearing Supply Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+		  </div>
           <h3>Bearing Supply, Sorting, and Placement Machine</h3>
           <p>Places bearings into a housing on a conveyor line. It requires 5 DCVs, 5 pneumatic cylinders, and 12 sensors for operation.</p>
           <div class="navbar">
@@ -348,7 +352,9 @@
           </div>
         </div>
         <div class="project-item">
-          <div class="project-image"></div>
+          <div class="project-image">
+			<img src="images/transfer-pic.jpg" alt="Bearing Supply Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+		  </div>
           <h3>Automated Parts Transfer System</h3>
           <p>Involves signal transmission between two Arduino's and a PLC while utilizing a pair of dual-axis wafer handling machines.</p>
           <div class="navbar">
@@ -389,7 +395,7 @@
 
     <!-- Work Experience Section -->
     <section id="work" class="section">
-      <h2>Work History</h2>
+      <h2>Detailed Work History</h2>
       <div class="work-list">
         <div class="work-item">
           <div class="company-logo">
