--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
   <div class="container">
     <nav class="navbar">
       <ul>
-        <li><a href="#about">About</a></li>
 		<li><a href="#projects">Projects</a></li>
 		<li><a href="#work">Work History</a></li>
         <li><a href="#education">Education</a></li>
@@ -279,32 +278,17 @@
         </div>
 		-->
         <h1 style="font-size: 25px;">Kurt J. Foster</h1>
-        <p>Webpage Status: <a style="color: limegreen">Updated June 2025</a></p>
+        <p>Webpage Status: <a style="color: grey">Updated June 2025</a></p>
       </div>
       <div class="portfolio-apps">
         <div class="app-buttons">
 		<!--
 		  <a href="#" class="app-button">GitHub</a>
           <a href="#" class="app-button">Onshape</a>
-          <a href="#" class="app-button">Email</a>
 		-->
         </div>
       </div>
     </header>
-    
-    <!-- About Section -->
-    <section id="about" class="section">
-      <div class="education-list">
-        <div class="education-item">
-		  <h1 style="font-size: 25px;">About</h1>
-          <p>
-			Hello and welcome! Here you will find my detailed work history and some projects I am working on.<br><br>
-			Although my webpage has a lot of information, you should be able to scan the site rather quickly if need be.<br><br>
-			I prefer to add details so it's a complete showcase of my skills/abilities, as well for anyone who wishes to use my documentation as a guide for their own projects.
-          </p>
-        </div>
-      </div>
-    </section>
     
     <!-- Projects Section -->
     <section id="projects" class="section">
