--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
   <div class="container">
     <nav class="navbar">
       <ul>
-		<li><a href="#projects">Projects</a></li>
 		<li><a href="#work">Work History</a></li>
         <li><a href="#education">Education</a></li>
+		<li><a href="#projects">Projects</a></li>
 		<!--
         <li><a href="#contact">Contact</a></li>
 		-->
@@ -278,7 +278,7 @@
         </div>
 		-->
         <h1 style="font-size: 25px;">Kurt J. Foster</h1>
-        <p>Webpage Status: <a style="color: grey">Updated June 2025</a></p>
+        <p>Webpage Status: <a style="color: grey">Updated July 28, 2025</a></p>
       </div>
       <div class="portfolio-apps">
         <div class="app-buttons">
@@ -289,98 +289,23 @@
         </div>
       </div>
     </header>
-    
-    <!-- Projects Section -->
-    <section id="projects" class="section">
-      <h2>Electrical and Mechanical Projects</h2>
-      <div class="project-grid">
-        <div class="project-item">
-          <div class="project-image">
-            <img src="images/binoscope-pic.jpg" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
-          </div>
-          <h3>Large Binoscope</h3>
-          <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
-          <div class="navbar">
-            <p>
-              <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>Onshape-3D-viewer</b></a>
-              <img src="images/openNewTab.png"><br>
-              <a href="https://docs.google.com/document/d/1WxkYBWqdLyLhxgRh7ZfJaYaSsf6swe2fiz7W-Qj-lPA/edit?usp=sharing" target="_blank"><b>Google-doc</b></a>
-              <img src="images/openNewTab.png">
-            </p>
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-image">
-            <img src="images/dosing-pic.jpg" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
-          </div>
-          <h3>Automatic Dosing Unit</h3>
-          <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics.</p>
-          <div class="navbar">
-            <p>
-              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3D-viewer</b></a>
-              <img src="images/openNewTab.png">
-            </p>
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-image">
-			<img src="images/bearing-pic.jpg" alt="Bearing Supply Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
-		  </div>
-          <h3>Bearing Supply, Sorting, and Placement Machine</h3>
-          <p>Places bearings into a housing on a conveyor line. It requires 5 DCVs, 5 pneumatic cylinders, and 12 sensors for operation.</p>
-          <div class="navbar">
-            <p>
-              <a href="docs/bearing-supply.pdf" target="_blank"><b>PDF-doc</b></a>
-              <img src="images/openNewTab.png">
-            </p>
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-image">
-			<img src="images/transfer-pic.jpg" alt="Bearing Supply Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
-		  </div>
-          <h3>Automated Parts Transfer System</h3>
-          <p>Involves signal transmission between two Arduino's and a PLC while utilizing a pair of dual-axis wafer handling machines.</p>
-          <div class="navbar">
-            <p>
-              <a href="docs/parts-transfer.pdf" target="_blank"><b>PDF-doc</b></a>
-              <img src="images/openNewTab.png">
-            </p>
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-image">
-            <img src="images/truss-telescope-pic.jpg" alt="Truss Telescope CAD Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
-          </div>
-          <h3>Truss-style Newtonian Telescope</h3>
-          <p>A small hobby of mine is optics, and this was a one-off project I started a while ago, lots of fun!</p>
-		  <div class="navbar">
-            <p>
-              <a href="https://cad.onshape.com/documents/bb61efcd8cafd93c45bcd32e/w/658a7cc72aebc31515716086/e/ccf98e5e25786474bdabf02e" target="_blank"><b>Onshape-3D-viewer</b></a>
-              <img src="images/openNewTab.png">
-            </p>
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-image">
-            <img src="images/bike-pic.jpg" alt="Mountain Bike Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
-          </div>
-          <h3>Aluminum Mountain Bike Frame</h3>
-          <p>I built a custom TIG welded 6061 aluminum bike frame.</p>
-		  <div class="navbar">
-            <p>
-              <a href="docs/mountain-bike.pdf" target="_blank"><b>PDF-doc</b></a>
-              <img src="images/openNewTab.png">
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Work Experience Section -->
     <section id="work" class="section">
       <h2>Detailed Work History</h2>
       <div class="work-list">
+		<div class="work-item">
+          <div class="company-logo">
+            <img src="images/panel-image.jpg" alt="Panel image" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
+          </div>
+          <div class="work-content">
+            <h3>Controls Engineering Student</h3>
+            <h4>Community College & University</h4>
+            <h5 style="color: grey;">January 2025 - Present</h5>
+            <p>
+			</p>
+          </div>
+        </div>
         <div class="work-item">
           <div class="company-logo">
             <img src="images/ninkasi-logo.jpg" alt="Ninkasi Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
@@ -609,6 +534,93 @@
               <li>Preparatory Chemistry</li>
               <li>Introduction to AutoCAD</li>
             </ul>
+        </div>
+      </div>
+    </section>
+	
+	<!-- Projects Section -->
+    <section id="projects" class="section">
+      <h2>Electrical and Mechanical Projects</h2>
+      <div class="project-grid">
+        <div class="project-item">
+          <div class="project-image">
+            <img src="images/binoscope-pic.jpg" alt="Binocular Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+          </div>
+          <h3>Large Binoscope</h3>
+          <p>Currently in the early design phase, testing scaled down model to verify the optical system is feasible.</p>
+          <div class="navbar">
+            <p>
+              <a href="https://cad.onshape.com/documents/5d92fe101b7e9bf07639868a/w/6050646a7c17f19ee574ff94/e/09aea8e79783908266cad741?renderMode=0&uiState=67aeb30c34b02f69725172fc" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <img src="images/openNewTab.png"><br>
+              <a href="https://docs.google.com/document/d/1WxkYBWqdLyLhxgRh7ZfJaYaSsf6swe2fiz7W-Qj-lPA/edit?usp=sharing" target="_blank"><b>Google-doc</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-image">
+            <img src="images/dosing-pic.jpg" alt="Dosing Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+          </div>
+          <h3>Automatic Dosing Unit</h3>
+          <p>Designing, building, and testing a UL-compliant device for automated gravity-fed dosing, possible application within hydroponics.</p>
+          <div class="navbar">
+            <p>
+              <a href="https://cad.onshape.com/documents/14566fd902a0be0d8c1e67b7/w/0ff7ca55352d42e768777c6e/e/b31f96b639cae0abea585bb0?renderMode=0&leftPanel=false&uiState=67afa1f73da8d76be352a58f" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-image">
+			<img src="images/bearing-pic.jpg" alt="Bearing Supply Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+		  </div>
+          <h3>Bearing Supply, Sorting, and Placement Machine</h3>
+          <p>Places bearings into a housing on a conveyor line. It requires 5 DCVs, 5 pneumatic cylinders, and 12 sensors for operation.</p>
+          <div class="navbar">
+            <p>
+              <a href="docs/bearing-supply.pdf" target="_blank"><b>PDF-doc</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-image">
+			<img src="images/transfer-pic.jpg" alt="Bearing Supply Machine Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+		  </div>
+          <h3>Automated Parts Transfer System</h3>
+          <p>Involves signal transmission between two Arduino's and a PLC while utilizing a pair of dual-axis wafer handling machines.</p>
+          <div class="navbar">
+            <p>
+              <a href="docs/parts-transfer.pdf" target="_blank"><b>PDF-doc</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-image">
+            <img src="images/truss-telescope-pic.jpg" alt="Truss Telescope CAD Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+          </div>
+          <h3>Truss-style Newtonian Telescope</h3>
+          <p>A small hobby of mine is optics, and this was a one-off project I started a while ago, lots of fun!</p>
+		  <div class="navbar">
+            <p>
+              <a href="https://cad.onshape.com/documents/bb61efcd8cafd93c45bcd32e/w/658a7cc72aebc31515716086/e/ccf98e5e25786474bdabf02e" target="_blank"><b>Onshape-3D-viewer</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-image">
+            <img src="images/bike-pic.jpg" alt="Mountain Bike Picture" style="width: 250px; height: 150px; object-fit: cover; border-radius: 8px;">
+          </div>
+          <h3>Aluminum Mountain Bike Frame</h3>
+          <p>I built a custom TIG welded 6061 aluminum bike frame.</p>
+		  <div class="navbar">
+            <p>
+              <a href="docs/mountain-bike.pdf" target="_blank"><b>PDF-doc</b></a>
+              <img src="images/openNewTab.png">
+            </p>
+          </div>
         </div>
       </div>
     </section>
