--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <img src="images/tesla-logo.jpg" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
-            <h3>Equipment Maintenance Technician</h3>
+            <h3>Equipment Maintenance Technician II</h3>
             <h4>Tesla, Inc.</h4>
             <h5 style="color: grey;">April 2024 - June 2024 · 3 months · Sparks, NV</h5>
             <p>Responsible for repairing manufacturing equipment in Powertrain Manufacturing.</p>
@@ -354,7 +354,7 @@
             <img src="images/hp-logo.jpg" alt="HP Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
-            <h3>Repair and Maintenance Technician</h3>
+            <h3>Repair and Maintenance Technician IV</h3>
             <h4>HP, Inc. contracted with Kforce, Inc.</h4>
             <h5 style="color: grey;">August 2023 - December 2023 · 5 months · Corvallis, OR</h5>
             <p>Repairing industrial automated systems.</p>
@@ -376,7 +376,7 @@
             <img src="images/eg-logo.jpg" alt="Automated Hydroponic Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
-            <h3>Automation Systems Technician</h3>
+            <h3>Automation Systems Technician II</h3>
             <h4>Automated Hydroponic Technologies, ABN</h4>
             <h5 style="color: grey;">March 2021 - July 2023 · 2 years 5 months · Corvallis, OR</h5>
             <p>Gravity-fed nutrient dosing for hydroponics.</p>
@@ -411,7 +411,7 @@
             <img src="images/tesla-logo.jpg" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
-            <h3>Equipment Maintenance Technician</h3>
+            <h3>Equipment Maintenance Technician II</h3>
             <h4>Tesla, Inc.</h4>
             <h5 style="color: grey;">October 2020 - February 2021 · 5 months · Sparks, NV</h5>
             <p>Responsible for repairing manufacturing equipment in Powertrain Manufacturing.</p>
@@ -438,7 +438,7 @@
             <img src="images/eg-logo.jpg" alt="EG Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
-            <h3>Automation Systems Technician</h3>
+            <h3>Automation Systems Technician I</h3>
             <h4>Automated Hydroponic Technologies, ABN</h4>
             <h5 style="color: grey;">August 2019 - September 2020 · 1 year 2 months · Corvallis, OR</h5>
             <p>Utilized automation for the advancement of easy to use and energy efficient farms.</p>
@@ -460,7 +460,7 @@
             <img src="images/tesla-logo.jpg" alt="Tesla Logo" style="width: 80px; height: 80px; object-fit: cover; border-radius: 8px;">
           </div>
           <div class="work-content">
-            <h3>Equipment Maintenance Technician</h3>
+            <h3>Equipment Maintenance Technician I</h3>
             <h4>Tesla, Inc.</h4>
             <h5 style="color: grey;">June 2018 - July 2019 · 1 year 2 months · Sparks, NV</h5>
             <p>Troubleshot & maintained machinery for a fast production ramp.</p>
