Added rev page, deleted links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>https://kfost.com</title>
+  <title>Kurt J. Foster</title>
   <style>
     /* Global Styling */
     body {
@@ -627,42 +627,7 @@
 	
     <!-- Footer Section -->
     <footer class="footer">
-      <p>&copy; 2025 by Kurt Foster</p>
-      <p>
-        Tools I've found interesting: 
-        <a href="https://www.onshape.com" target="_blank">PTC OnShape</a>, 
-        <a href="https://www.autodesk.com" target="_blank">Autodesk AutoCAD</a>, 
-        <a href="https://www.graebert.com/ares-commander" target="_blank">Gräbert ARES Commander</a>, 
-        <a href="https://www.raspberrypi.com" target="_blank">Raspberry Pi</a>, 
-        <a href="https://www.arduino.cc" target="_blank">Arduino</a>, 
-        <a href="https://beagleboard.org" target="_blank">Beagle Board</a>, 
-        <a href="https://inductiveautomation.com" target="_blank">Ignition Maker Edition</a>, 
-        <a href="https://www.docker.com" target="_blank">Docker</a>, 
-        <a href="https://www.nginx.com" target="_blank">NGINX</a>, 
-        <a href="https://www.passportjs.org" target="_blank">Passport.js</a>, 
-        <a href="https://socket.io" target="_blank">Socket.IO</a>, 
-        <a href="https://nodejs.org" target="_blank">Node.js</a>, 
-        <a href="https://reactjs.org" target="_blank">React</a>, 
-        <a href="https://www.analog.com/en/design-center/design-tools-and-calculators/ltspice-simulator.html" target="_blank">LTspice</a>, 
-        <a href="https://www.ni.com/en-us/shop/labview.html" target="_blank">LabVIEW</a>, 
-        <a href="https://www.mysql.com" target="_blank">MySQL</a>, 
-        <a href="https://standards.nasa.gov" target="_blank">NASA Standards</a>, 
-        <a href="https://exoplanetarchive.ipac.caltech.edu" target="_blank">NASA Exoplanet Archive</a>, 
-        <a href="https://www.teamviewer.com" target="_blank">TeamViewer</a>, 
-        <a href="https://www.diagrams.net" target="_blank">draw.io</a>, 
-        <a href="https://joinmastodon.org" target="_blank">Mastodon</a>, 
-        <a href="https://github.com" target="_blank">GitHub</a>, 
-        <a href="https://www.figma.com" target="_blank">Figma</a>, 
-        <a href="https://visualstudio.microsoft.com" target="_blank">Visual Studio</a>, 
-        <a href="https://openai.com/blog/openai-codex" target="_blank">Codex</a>, 
-        <a href="https://getbootstrap.com" target="_blank">getBootstrap</a>, 
-        <a href="https://www.w3schools.com" target="_blank">W3Schools</a>, 
-        <a href="https://www.midjourney.com" target="_blank">Midjourney</a>, 
-        <a href="https://jsfiddle.net" target="_blank">JSFiddle</a>, 
-        <a href="https://brm.io/matter-js" target="_blank">Matter.js</a>, 
-        <a href="https://github.com/openai/point-e" target="_blank">Point-E</a>
-      </p>
-      <p>By accessing this website, you agree to the <a href="use-policy.html" target="_blank">use policy</a>.</p>
+      <p>&copy; 2025 by Kurt J. Foster</p>
     </footer>
     
   </div>
